General fixes with sonarqube help